# erp-server-old

./: Cargo.toml
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/catalog/: attribute.rs  attribute_option.rs  category.rs
domain/src/measurement/: uom.rs
domain/src/product/: attribute.rs  attribute_option.rs  mod.rs  product.rs  product_combination.rs  product_template.rs
infra/: Cargo.toml
infra/src/: response.rs  state.rs
interface/: Cargo.toml
interface/src/: lib.rs
interface/src/attribute/: handler.rs  route.rs
interface/src/category/: handler.rs
interface/src/product/: handler.rs  route.rs
interface/src/uom/: handler.rs  route.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241210_145837_create_uom_table.rs  m20241211_125011_create_category_table.rs  m20241212_025514_create_attribute_table.rs  m20241212_025826_create_attribute_option_table.rs  m20241216_120454_create_product_template_table.rs  m20241216_143112_create_product_table.rs  m20241222_055121_create_product_combination_table.rs
server/: Cargo.toml
server/src/: lib.rs
service/: Cargo.toml
service/src/catalog/: create_attribute_usecase.rs  list_paginated_categories_usecase.rs  mod.rs
service/src/measurement/: create_uom_usecase.rs  find_uom_usecase.rs  list_paginated_uoms_usecase.rs  mod.rs  update_uom_usecase.rs
service/src/product/: create_attribute_usecase.rs  create_product_usecase.rs  find_attribute_usecase.rs  find_options_by_attribute_id.rs  list_paginated_attributes_usecase.rs  list_paginated_categories_usecase.rs  list_paginated_products_usecase.rs  mod.rs  update_attribute_usecase.rs
