[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
discern = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
short-uuid = { workspace = true }
uuid = { workspace = true }
