[package]
name = "interface"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-macros = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

domain = { path = "../domain" }
infra = { path = "../infra" }
service = { path = "../service" }
