[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
discern = { workspace = true }
dotenvy = { workspace = true }
sea-orm = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

infra = { path = "../infra" }
interface = { path = "../interface" }
